--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "myportfolio",
+  "homepage": "https://Tushar0744.github.io/tushar",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +19,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
